se agrego imagen al index

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <title>Calculadora de aceleracion</title>
     <meta content="Catalina Rubies" name="autor">
-    <meta content="Pagina web de calculadora de aceleracion" name="Descripcion">
-    <meta content="fisica, aceleracion, velocidad, posicion, tiempo" name="palabras clave">
+    <meta content="Pagina web para calcular aceleracion" name="descripcion">
+    <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
+
 </head>
 <body>
+<header>
+    <h1>Calculadora de aceleracion</h1>
+    <img src="Imagenes/imagen_planeta.jpg">
+</header>
+<nav></nav>
+<section>
+
+</section>
+
+
 
 
 </body>
