se modifico la imagen de fondo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <h1>Calculadora de aceleracion</h1>
-    <img src="Imagenes/imagen_planeta.jpg">
+    <img src="Imagenes/imagen_fondo.jpg">
 </header>
 <nav></nav>
 <section>
