se agregaron etiquetas semanticas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
+    <link rel="stylesheet" href="estilo.css" type="text/css">
 
 </head>
 <body>
