--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
 <body>
 <header>
     <h1>Calculadora de aceleracion</h1>
-    <img src="Imagenes/imagen_fondo.jpg">
+    <img src="Imagenes/imagen_fondo.jpg" alt="logo" class="logo" >
 </header>
 <nav></nav>
 <section>
+    <div>
+        Inicio
+    </div>
+    <div>
+        Calcular en funcion de la velocidad inicial, velocidad final y tiempo
+    </div>
+    <div>
+        Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
+    </div>
+    <div>
+        Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
+    </div>
 
 </section>
 
