se agrego informacion y una pagina

--- a/index.html
+++ b/index.html
@@ -12,27 +12,25 @@
 <body>
 <header>
     <h1>Calculadora de aceleracion</h1>
-    <img src="Imagenes/imagen_fondo.jpg" alt="logo" class="logo" >
+    <div class="logo1">
+        <img src="Imagenes/imagen_fondo.jpg" alt="logo" class="logo">
+        <div class="textos">
+            <section>
+        La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo. 
+        Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay aceleración, la velocidad se mantiene constante.
+        La aceleración es una magnitud vectorial:tiene magnitud y dirección.
+        En el caso del movimiento rectilíneo, la dirección de la aceleración es siempre la misma que la dirección del movimiento del cuerpo, y el cuerpo puede experimentar un aumento en la velocidad o una desaceleración.
+            </section>
+            
+            <div>Inicio</div>
+            <div>Calcular en funcion de la velocidad inicial, velocidad final y tiempo</div>
+            <div>Calcular en funcion de la velocidad inicial, desplazamiento y tiempo</div>
+            <div>Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
+        </div>
+    </div>
+
 </header>
 <nav></nav>
-<section>
-    <div>
-        Inicio
-    </div>
-    <div>
-        Calcular en funcion de la velocidad inicial, velocidad final y tiempo
-    </div>
-    <div>
-        Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
-    </div>
-    <div>
-        Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
-    </div>
-
-</section>
-
-
-
 
 </body>
 </html>
