Se agrego navegacion entre las paginas, utilizacion de input

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Calculadora de aceleracion</title>
+    <title>CALCULADORA DE ACELERACION</title>
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
@@ -10,27 +10,36 @@
 
 </head>
 <body>
+    <nav>
+        <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/index.html" target="_self">Inicio</a>
+    </nav>
 <header>
-    <h1>Calculadora de aceleracion</h1>
-    <div class="logo1">
-        <img src="Imagenes/imagen_fondo.jpg" alt="logo" class="logo">
-        <div class="textos">
-            <section>
+    <h1>CALCULADORA DE ACELERACION</h1>
+</header>
+
+    <section class="info">
+        <p>
         La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo. 
         Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay aceleración, la velocidad se mantiene constante.
         La aceleración es una magnitud vectorial:tiene magnitud y dirección.
         En el caso del movimiento rectilíneo, la dirección de la aceleración es siempre la misma que la dirección del movimiento del cuerpo, y el cuerpo puede experimentar un aumento en la velocidad o una desaceleración.
-            </section>
-            
-            <div>Inicio</div>
-            <div>Calcular en funcion de la velocidad inicial, velocidad final y tiempo</div>
-            <div>Calcular en funcion de la velocidad inicial, desplazamiento y tiempo</div>
-            <div>Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
-        </div>
+        </p>
+    </section>
+    <div class="info2">
+        <p> A partir de los datos que tenemos, podemos calcular la aceleracion en funcion de: </p>
     </div>
 
-</header>
-<nav></nav>
+    <section class="opciones">
+        <div class="cuadro">
+            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidades_tiempo.html" target="_self">
+            Calcular en funcion de la velocidad inicial, velocidad final y tiempo
+            </a>
+        </div>
+        <div class="cuadro">Calcular en funcion de la velocidad inicial, desplazamiento y tiempo</div>
+        <div class="cuadro">Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
+    </section>
+
+
 
 </body>
 </html>
