Se agrego una pagina

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             Calcular en funcion de la velocidad inicial, velocidad final y tiempo
             </a>
         </div>
-        <div class="cuadro">Calcular en funcion de la velocidad inicial, desplazamiento y tiempo</div>
+        <div class="cuadro">
+            
+            Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
+        </div>
         <div class="cuadro">Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
     </section>
 
