--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             </a>
         </div>
         <div class="cuadro">
-            
+            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidad_desplaz_tiempo.html" target="_self">
             Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
+            </a>
         </div>
         <div class="cuadro">Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
     </section>
