--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -14,37 +14,32 @@
         <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/index.html" target="_self">Inicio</a>
     </nav>
 <header>
-    <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
+    <h2> Calculadora de aceleracion en funcion de la velocidad inicial, velocidad final y desplazamiento </h2>
 </header>
 
 <section class="info">
     <p>
-    Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleracion y el tiempo:
+    Sin tener ninguna medida de tiempo, se puede calcular la aceleracion con la siguiente formula:
     </p>
     <p>
-    xf = x0 + v0t + 1/2 at²
+    a = 1/2 (vf² - vo²)/(xf - x0)
     </p>
-    <p>
-    De alli despejamos la aceleracion:
-    </p>
-    <p>
-    a = (2(xf - x0)) / t² - 2v0/t
-    </p>
+    
 </section>
 
     <fieldset class="ingresar">
         <legend>Ingresar los datos requeridos:</legend>
         <p>
+        <label for="velocidadi"> Velocidad inicial [m/s]:</label>
+        <input type="number"id="velocidadi"><br>
+        <label for="velocidadf"> Velocidad final [m/s]:</label>
+        <input type="number" id="velocidadf">
+        </p>
+        <p>
         <label for="posicioni"> Posicion inicial [m]:</label>
         <input type="number"id="posicioni"><br>
         <label for="posicionf"> Posicion final [m]:</label>
         <input type="number" id="posicionf">
-        </p>
-        <p>
-        <label for="velinicial"> Velocidad inicial [m/s]:</label>
-        <input type="number"id="velinicial"><br>
-        <label for="tiempo"> Tiempo [s]:</label>
-        <input type="number" id="tiempo">
         </p>
         <p>
         <button type="button">Calcular aceleracion</button>
