se modifico la pagina principal

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
             </a>
         </div>
-        <div class="cuadro">Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento</div>
+        <div class="cuadro">
+            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidades_desplaz.html" target="_self">
+            Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
+            </a>
+        </div>
     </section>
 
 
