Se modificaron direcciones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/index.html" target="_self">Inicio</a>
+        <a href="index.html" target="_self">Inicio</a>
     </nav>
 <header>
     <h1>CALCULADORA DE ACELERACION</h1>
@@ -31,17 +31,17 @@
 
     <section class="opciones">
         <div class="cuadro">
-            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidades_tiempo.html" target="_self">
+            <a href="velocidades_tiempo.html" target="_self">
             Calcular en funcion de la velocidad inicial, velocidad final y tiempo
             </a>
         </div>
         <div class="cuadro">
-            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidad_desplaz_tiempo.html" target="_self">
+            <a href="velocidad_desplaz_tiempo.html" target="_self">
             Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
             </a>
         </div>
         <div class="cuadro">
-            <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/velocidades_desplaz.html" target="_self">
+            <a href="velocidades_desplaz.html" target="_self">
             Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
             </a>
         </div>
