--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="file:///C:/Users/ggrub/Desktop/Labcomputacion2/proyecto2024-rubies/index.html" target="_self">Inicio</a>
+        <a href="index.html" target="_self">Inicio</a>
     </nav>
 <header>
     <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
