--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
     <link rel="stylesheet" href="estilo.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="Imagenes/favicon.png">
 
 </head>
 <body>
-    <nav>
-        <a href="index.html" target="_self">Inicio</a>
-    </nav>
 <header>
     <h1>CALCULADORA DE ACELERACION</h1>
 </header>
