--- a/velocidades_tiempo.html
+++ b/velocidades_tiempo.html
@@ -6,6 +6,8 @@
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
+    <link rel="icon" type="image/png" href="Imagenes/favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css" type="text/css">
 
 </head>
