se agrego placeholder

--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -38,15 +38,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
         <label for="posicioni"> Posicion inicial [m]:</label>
-        <input type="number"id="posicioni"><br>
+        <input type="number"id="posicioni" placeholder="Ingrese la posición inicial"><br>
         <label for="posicionf"> Posicion final [m]:</label>
-        <input type="number" id="posicionf">
+        <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
         <label for="velinicial"> Velocidad inicial [m/s]:</label>
-        <input type="number"id="velinicial"><br>
+        <input type="number"id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
         <label for="tiempo"> Tiempo [s]:</label>
-        <input type="number" id="tiempo">
+        <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
         </p>
         <p>
         <button type="button">Calcular aceleracion</button>
