--- a/velocidades_tiempo.html
+++ b/velocidades_tiempo.html
@@ -32,15 +32,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
         <label for="tiempoi"> Tiempo inicial [s]:</label>
-        <input type="number"id="tiempoi"><br>
+        <input type="number"id="tiempoi" placeholder="Ingrese el tiempo inicial"><br>
         <label for="tiempof"> Tiempo final [s]:</label>
-        <input type="number" id="tiempof">
+        <input type="number" id="tiempof" placeholder="Ingrese el tiempo final">
         </p>
         <p>
         <label for="velinicial"> Velocidad inicial [m/s]:</label>
-        <input type="number"id="velinicial"><br>
+        <input type="number"id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
         <label for="velfinal"> Velocidad final [m/s]:</label>
-        <input type="number" id="velfinal">
+        <input type="number" id="velfinal" placeholder="Ingrese la velocidad final">
         </p>
         <p>
         <button type="button">Calcular aceleracion</button>
