--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -33,15 +33,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
         <label for="velocidadi"> Velocidad inicial [m/s]:</label>
-        <input type="number"id="velocidadi"><br>
+        <input type="number"id="velocidadi" placeholder="Ingrese la velocidad inicial"><br>
         <label for="velocidadf"> Velocidad final [m/s]:</label>
-        <input type="number" id="velocidadf">
+        <input type="number" id="velocidadf" placeholder="Ingrese la velocidad final">
         </p>
         <p>
         <label for="posicioni"> Posicion inicial [m]:</label>
-        <input type="number"id="posicioni"><br>
+        <input type="number"id="posicioni" placeholder="Ingrese la posición inicial"><br>
         <label for="posicionf"> Posicion final [m]:</label>
-        <input type="number" id="posicionf">
+        <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
         <button type="button">Calcular aceleracion</button>
