se agrego implementacion de estilo por id

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>CALCULADORA DE ACELERACION</h1>
 </header>
 
-    <section class="info">
+    <section id="info">
         <p>
         La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo. 
         Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay aceleración, la velocidad se mantiene constante.
