--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -19,7 +19,7 @@
     <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
 </header>
 
-<section class="info">
+<section id="info">
     <p>
     Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleracion y el tiempo:
     </p>
