--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -19,7 +19,7 @@
     <h2> Calculadora de aceleracion en funcion de la velocidad inicial, velocidad final y desplazamiento </h2>
 </header>
 
-<section class="info">
+<section id="info">
     <p>
     Sin tener ninguna medida de tiempo, se puede calcular la aceleracion con la siguiente formula:
     </p>
