--- a/velocidades_tiempo.html
+++ b/velocidades_tiempo.html
@@ -19,7 +19,7 @@
     <h2> Calculadora de aceleracion en funcion de la velocidad inicial, velocidad final y tiempo</h2>
 </header>
 
-<section class="info">
+<section id="info">
     <p>
     Como se menciono anteriormente, la aceleracion es el cambio en la velocidad por unidad de tiempo:
     </p>
