se agrego etiqueta img, e identacion de todas las paginas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>CALCULADORA DE ACELERACION</title>
@@ -11,17 +12,24 @@
     <link rel="icon" type="image/png" href="Imagenes/favicon.png">
 
 </head>
+
 <body>
-<header>
-    <h1>CALCULADORA DE ACELERACION</h1>
-</header>
+    <header>
+        <h1>CALCULADORA DE ACELERACION</h1>
+    </header>
+
+    <div class="agrego_im">
+        <img src="Imagenes/agregar_imagen.png" title="Las Leyes de Newton han servido para explicar y describir el movimiento de los cuerpos sometidos a una fuerza y una determinada aceleración. Estos principios fueron postulados en 1687 en su obra Principios matemáticos de la filosofía natural.">
+    </div>
 
     <section id="info">
         <p>
-        La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo. 
-        Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay aceleración, la velocidad se mantiene constante.
-        La aceleración es una magnitud vectorial:tiene magnitud y dirección.
-        En el caso del movimiento rectilíneo, la dirección de la aceleración es siempre la misma que la dirección del movimiento del cuerpo, y el cuerpo puede experimentar un aumento en la velocidad o una desaceleración.
+            La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo.
+            Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay
+            aceleración, la velocidad se mantiene constante.
+            La aceleración es una magnitud vectorial:tiene magnitud y dirección.
+            En el caso del movimiento rectilíneo, la dirección de la aceleración es siempre la misma que la dirección
+            del movimiento del cuerpo, y el cuerpo puede experimentar un aumento en la velocidad o una desaceleración.
         </p>
     </section>
     <div class="info2">
@@ -31,17 +39,17 @@
     <section class="opciones">
         <div class="cuadro">
             <a href="velocidades_tiempo.html" target="_self">
-            Calcular en funcion de la velocidad inicial, velocidad final y tiempo
+                Calcular en funcion de la velocidad inicial, velocidad final y tiempo
             </a>
         </div>
         <div class="cuadro">
             <a href="velocidad_desplaz_tiempo.html" target="_self">
-            Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
+                Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
             </a>
         </div>
         <div class="cuadro">
             <a href="velocidades_desplaz.html" target="_self">
-            Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
+                Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
             </a>
         </div>
     </section>
@@ -49,4 +57,5 @@
 
 
 </body>
+
 </html>
