--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title> Calculadora de aceleracion</title>
@@ -11,45 +12,47 @@
     <link rel="stylesheet" href="estilo.css" type="text/css">
 
 </head>
+
 <body>
     <nav>
         <a href="index.html" target="_self">Inicio</a>
     </nav>
-<header>
-    <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
-</header>
+    <header>
+        <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
+    </header>
 
-<section id="info">
-    <p>
-    Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleracion y el tiempo:
-    </p>
-    <p>
-    xf = x0 + v0t + 1/2 at²
-    </p>
-    <p>
-    De alli despejamos la aceleracion:
-    </p>
-    <p>
-    a = (2(xf - x0)) / t² - 2v0/t
-    </p>
-</section>
+    <section id="info">
+        <p>
+            Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleracion y
+            el tiempo:
+        </p>
+        <p>
+            xf = x0 + v0t + 1/2 at²
+        </p>
+        <p>
+            De alli despejamos la aceleracion:
+        </p>
+        <p>
+            a = (2(xf - x0)) / t² - 2v0/t
+        </p>
+    </section>
 
     <fieldset class="ingresar">
         <legend>Ingresar los datos requeridos:</legend>
         <p>
-        <label for="posicioni"> Posicion inicial [m]:</label>
-        <input type="number"id="posicioni" placeholder="Ingrese la posición inicial"><br>
-        <label for="posicionf"> Posicion final [m]:</label>
-        <input type="number" id="posicionf" placeholder="Ingrese la posición final">
+            <label for="posicioni"> Posicion inicial [m]:</label>
+            <input type="number" id="posicioni" placeholder="Ingrese la posición inicial"><br>
+            <label for="posicionf"> Posicion final [m]:</label>
+            <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
-        <label for="velinicial"> Velocidad inicial [m/s]:</label>
-        <input type="number"id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
-        <label for="tiempo"> Tiempo [s]:</label>
-        <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
+            <label for="velinicial"> Velocidad inicial [m/s]:</label>
+            <input type="number" id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
+            <label for="tiempo"> Tiempo [s]:</label>
+            <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
         </p>
         <p>
-        <button type="button">Calcular aceleracion</button>
+            <button type="button">Calcular aceleracion</button>
 
         </p>
     </fieldset>
