se corrigieron wireframes desktop y mobile

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
     <section class="opciones">
         <div class="cuadro">
-            <a href="velocidades_tiempo.html" target="_self">
+            <a href="velocidades_tiempo.html">
                 Calcular en funcion de la velocidad inicial, velocidad final y tiempo
             </a>
         </div>
         <div class="cuadro">
-            <a href="velocidad_desplaz_tiempo.html" target="_self">
+            <a href="velocidad_desplaz_tiempo.html">
                 Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
             </a>
         </div>
         <div class="cuadro">
-            <a href="velocidades_desplaz.html" target="_self">
+            <a href="velocidades_desplaz.html">
                 Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
             </a>
         </div>
