se corrigieron errores de ortografia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CALCULADORA DE ACELERACION</title>
+    <title>CALCULADORA DE ACELERACIÓN</title>
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1>CALCULADORA DE ACELERACION</h1>
+        <h1>CALCULADORA DE ACELERACIÓN</h1>
     </header>
 
     <div class="agrego_im">
@@ -27,29 +27,29 @@
             La aceleración es el cambio en la velocidad de un cuerpo por unidad de tiempo.
             Si un cuerpo experimenta un cambio en su velocidad, significa que hay una aceleración. Si no hay
             aceleración, la velocidad se mantiene constante.
-            La aceleración es una magnitud vectorial:tiene magnitud y dirección.
+            La aceleración es una magnitud vectorial: tiene magnitud y dirección.
             En el caso del movimiento rectilíneo, la dirección de la aceleración es siempre la misma que la dirección
             del movimiento del cuerpo, y el cuerpo puede experimentar un aumento en la velocidad o una desaceleración.
         </p>
     </section>
     <div class="info2">
-        <p> A partir de los datos que tenemos, podemos calcular la aceleracion en funcion de: </p>
+        <p> A partir de los datos que tenemos, podemos calcular la aceleración en función de: </p>
     </div>
 
     <section class="opciones">
         <div class="cuadro">
             <a href="velocidades_tiempo.html">
-                Calcular en funcion de la velocidad inicial, velocidad final y tiempo
+                Calcular en función de la velocidad inicial, velocidad final y tiempo
             </a>
         </div>
         <div class="cuadro">
             <a href="velocidad_desplaz_tiempo.html">
-                Calcular en funcion de la velocidad inicial, desplazamiento y tiempo
+                Calcular en función de la velocidad inicial, desplazamiento y tiempo
             </a>
         </div>
         <div class="cuadro">
             <a href="velocidades_desplaz.html">
-                Calcular en funcion de la velocidad inicial, velocidad final y desplazamiento
+                Calcular en función de la velocidad inicial, velocidad final y desplazamiento
             </a>
         </div>
     </section>
