--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Calculadora de aceleracion</title>
+    <title> Calculadora de aceleración</title>
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
@@ -18,12 +18,12 @@
         <a href="index.html" target="_self">Inicio</a>
     </nav>
     <header>
-        <h2> Calculadora de aceleracion en funcion de la velocidad inicial, velocidad final y desplazamiento </h2>
+        <h2> Calculadora de aceleración en función de la velocidad inicial, velocidad final y desplazamiento </h2>
     </header>
 
     <section id="info">
         <p>
-            Sin tener ninguna medida de tiempo, se puede calcular la aceleracion con la siguiente formula:
+            Sin tener ninguna medida de tiempo, se puede calcular la aceleración con la siguiente fórmula:
         </p>
         <p>
             a = 1/2 (vf² - vo²)/(xf - x0)
@@ -40,13 +40,13 @@
             <input type="number" id="velocidadf" placeholder="Ingrese la velocidad final">
         </p>
         <p>
-            <label for="posicioni"> Posicion inicial [m]:</label>
+            <label for="posicioni"> Posición inicial [m]:</label>
             <input type="number" id="posicioni" placeholder="Ingrese la posición inicial"><br>
-            <label for="posicionf"> Posicion final [m]:</label>
+            <label for="posicionf"> Posición final [m]:</label>
             <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
-            <button type="button">Calcular aceleracion</button>
+            <button type="button">Calcular aceleración</button>
 
         </p>
     </fieldset>
