--- a/velocidades_tiempo.html
+++ b/velocidades_tiempo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Calculadora de aceleracion</title>
+    <title> Calculadora de aceleración</title>
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
@@ -18,12 +18,12 @@
         <a href="index.html" target="_self">Inicio</a>
     </nav>
     <header>
-        <h2> Calculadora de aceleracion en funcion de la velocidad inicial, velocidad final y tiempo</h2>
+        <h2> Calculadora de aceleración en función de la velocidad inicial, velocidad final y tiempo</h2>
     </header>
 
     <section id="info">
         <p>
-            Como se menciono anteriormente, la aceleracion es el cambio en la velocidad por unidad de tiempo:
+            Como se menciono anteriormente, la aceleración es el cambio en la velocidad por unidad de tiempo:
         </p>
         <p>
             a = Δv / Δt = (vf - v0) / t
@@ -45,7 +45,7 @@
             <input type="number" id="velfinal" placeholder="Ingrese la velocidad final">
         </p>
         <p>
-            <button type="button">Calcular aceleracion</button>
+            <button type="button">Calcular aceleración</button>
 
         </p>
     </fieldset>
