--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Calculadora de aceleracion</title>
+    <title> Calculadora de aceleración</title>
     <meta content="Catalina Rubies" name="autor">
     <meta content="Pagina web para calcular aceleracion" name="descripcion">
     <meta content="aceleracion, velocidad, tiempo, posicion" name="palabras clave">
@@ -18,19 +18,19 @@
         <a href="index.html" target="_self">Inicio</a>
     </nav>
     <header>
-        <h2> Calculadora de aceleracion en funcion de la velocidad inicial, desplazamiento y tiempo</h2>
+        <h2> Calculadora de aceleración en función de la velocidad inicial, desplazamiento y tiempo</h2>
     </header>
 
     <section id="info">
         <p>
-            Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleracion y
+            Se describe la posición del cuerpo en función de la posicion inicial,la velocidad inicial, la aceleración y
             el tiempo:
         </p>
         <p>
             xf = x0 + v0t + 1/2 at²
         </p>
         <p>
-            De alli despejamos la aceleracion:
+            De allí despejamos la aceleración:
         </p>
         <p>
             a = (2(xf - x0)) / t² - 2v0/t
@@ -40,9 +40,9 @@
     <fieldset class="ingresar">
         <legend>Ingresar los datos requeridos:</legend>
         <p>
-            <label for="posicioni"> Posicion inicial [m]:</label>
+            <label for="posicioni"> Posición inicial [m]:</label>
             <input type="number" id="posicioni" placeholder="Ingrese la posición inicial"><br>
-            <label for="posicionf"> Posicion final [m]:</label>
+            <label for="posicionf"> Posición final [m]:</label>
             <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
@@ -52,7 +52,7 @@
             <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
         </p>
         <p>
-            <button type="button">Calcular aceleracion</button>
+            <button type="button">Calcular aceleración</button>
 
         </p>
     </fieldset>
