se agrego funcionalidad js

--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="Imagenes/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css" type="text/css">
+    <script src="JS.js"></script>
 
 </head>
 
@@ -52,7 +53,10 @@
             <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
         </p>
         <p>
-            <button type="button">Calcular aceleración</button>
+            <button type="button" onclick="v_des_t()">Calcular aceleración</button>
+            <p id="resultado"></p>
+            
+
 
         </p>
     </fieldset>
