--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="Imagenes/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css" type="text/css">
+    <script src="JS.js"></script>
 
 </head>
 
@@ -46,7 +47,8 @@
             <input type="number" id="posicionf" placeholder="Ingrese la posición final">
         </p>
         <p>
-            <button type="button">Calcular aceleración</button>
+            <button type="button" onclick="vel_des()">Calcular aceleración</button>
+            <p id="resultado"></p>
 
         </p>
     </fieldset>
