se agrego un maximo de numeros

--- a/velocidad_desplaz_tiempo.html
+++ b/velocidad_desplaz_tiempo.html
@@ -42,15 +42,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
             <label for="posicioni"> Posición inicial [m]:</label>
-            <input type="number" id="posicioni" placeholder="Ingrese la posición inicial"><br>
+            <input type="number" id="posicioni" placeholder="Ingrese la posición inicial" maxlength="10"><br>
             <label for="posicionf"> Posición final [m]:</label>
-            <input type="number" id="posicionf" placeholder="Ingrese la posición final">
+            <input type="number" id="posicionf" placeholder="Ingrese la posición final" maxlength="10">
         </p>
         <p>
             <label for="velinicial"> Velocidad inicial [m/s]:</label>
-            <input type="number" id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
+            <input type="number" id="velinicial" placeholder="Ingrese la velocidad inicial" maxlength="10"><br>
             <label for="tiempo"> Tiempo [s]:</label>
-            <input type="number" id="tiempo" placeholder="Ingrese el tiempo">
+            <input type="number" id="tiempo" placeholder="Ingrese el tiempo" maxlength="10">
         </p>
         <p>
             <button type="button" onclick="v_des_t()">Calcular aceleración</button>
