--- a/velocidades_desplaz.html
+++ b/velocidades_desplaz.html
@@ -36,15 +36,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
             <label for="velocidadi"> Velocidad inicial [m/s]:</label>
-            <input type="number" id="velocidadi" placeholder="Ingrese la velocidad inicial"><br>
+            <input type="number" id="velocidadi" placeholder="Ingrese la velocidad inicial" maxlength="10"><br>
             <label for="velocidadf"> Velocidad final [m/s]:</label>
-            <input type="number" id="velocidadf" placeholder="Ingrese la velocidad final">
+            <input type="number" id="velocidadf" placeholder="Ingrese la velocidad final" maxlength="10">
         </p>
         <p>
             <label for="posicioni"> Posición inicial [m]:</label>
-            <input type="number" id="posicioni" placeholder="Ingrese la posición inicial"><br>
+            <input type="number" id="posicioni" placeholder="Ingrese la posición inicial" maxlength="10"><br>
             <label for="posicionf"> Posición final [m]:</label>
-            <input type="number" id="posicionf" placeholder="Ingrese la posición final">
+            <input type="number" id="posicionf" placeholder="Ingrese la posición final" maxlength="10">
         </p>
         <p>
             <button type="button" onclick="vel_des()">Calcular aceleración</button>
