--- a/velocidades_tiempo.html
+++ b/velocidades_tiempo.html
@@ -35,15 +35,15 @@
         <legend>Ingresar los datos requeridos:</legend>
         <p>
             <label for="tiempoi"> Tiempo inicial [s]:</label>
-            <input type="number" id="tiempoi" placeholder="Ingrese el tiempo inicial"><br>
+            <input type="number" id="tiempoi" placeholder="Ingrese el tiempo inicial" maxlength="10"><br>
             <label for="tiempof"> Tiempo final [s]:</label>
-            <input type="number" id="tiempof" placeholder="Ingrese el tiempo final">
+            <input type="number" id="tiempof" placeholder="Ingrese el tiempo final" maxlength="10">
         </p>
         <p>
             <label for="velinicial"> Velocidad inicial [m/s]:</label>
-            <input type="number" id="velinicial" placeholder="Ingrese la velocidad inicial"><br>
+            <input type="number" id="velinicial" placeholder="Ingrese la velocidad inicial" maxlength="10"><br>
             <label for="velfinal"> Velocidad final [m/s]:</label>
-            <input type="number" id="velfinal" placeholder="Ingrese la velocidad final">
+            <input type="number" id="velfinal" placeholder="Ingrese la velocidad final" maxlength="10">
         </p>
         <p>
             <button type="button" onclick="vel_t()">Calcular aceleración</button>
