Proyecto adaptado para calcular fuerza en lugar de aceleración. HTMLs y JS modificados

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Catalina Rubies">
     <meta name="description" content="Página de contacto para consultas y mensajes">
     <title>Contacto - Rubies, Catalina</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
