--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
         <main>
             <section>
                 <h2>Dejá tu consulta</h2>
-                <form id="form-contacto" action="#" method="post">
+                <form id="form-contacto" method="post">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" size="30" maxlength="50"
                         required>
