--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
         <main>
             <section>
                 <h2>Dejá tu consulta</h2>
-                <form id="form-contacto" method="post">
+                <form id="form-contacto">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" size="30" maxlength="50"
                         required>
@@ -53,6 +53,7 @@
             <p>&copy; 2025 Rubies, Catalina - Todos los derechos reservados.</p>
         </footer>
     </div>
+    <script src="calculos.js"></script>
 </body>
 
 </html>
