--- a/formulas.html
+++ b/formulas.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="fórmulas, física, newton, fuerza, masa, aceleración, tiempo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
