--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="física, newton, fuerza, aceleración, masa, calculadora, ley de newton">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
