--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Página de contacto para consultas y mensajes">
     <title>Contacto - Rubies, Catalina</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link rel="icon" href="Imagenes/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
