--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="física, newton, fuerza, aceleración, masa, calculadora, ley de newton">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="estilo.css">
-    <link rel="icon" href="imagenes/favicon.png" type="image/png">
+    <link rel="icon" href="Imagenes/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
@@ -63,8 +63,7 @@
             </section>
 
             <section>
-                <canvas id="grafico" width="400" height="200"
-                    style="margin-top: 20px; background-color: #ffffff; border: 1px solid #ccc;"></canvas>
+                <canvas id="grafico" width="400" height="200"></canvas>
             </section>
         </main>
 
